--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "d-journal",
+  "name": "D-Journal",
   "private": true,
+  "description": "DApp to create your decentralized journal",
   "version": "0.0.0",
   "type": "module",
+  "main": "./src/main.tsx",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -15,7 +17,10 @@
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
+    "styled-components": "^5.3.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
