--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@web3-react/core": "^6.1.9",
@@ -23,6 +25,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
     "gh-pages": "^4.0.0",
@@ -30,5 +33,6 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
-  }
+  },
+  "homepage": "https://leandrogavidia.github.io/d-journal"
 }
